
  This was mostly done to make it easier to provide wheels in future releases.

Bugfixes:

* Avoid build error with Python 2.7 when using the OSX 10.12 SDK, triggered
  when Python was build using MacPython support.

* Compatibility definitions for MAC_OS_X_VERSION_10_10, MAC_OS_X_VERSION_10_11
  and MAC_OS_X_VERSION_10_12 were wrong, adjusted these.

Version 3.2
-----------

**Backward compatibility note:** Due to a change in the way the default
method signature is calculated PyObjC is now more strict in enforcing
the Python<->Objective-C mapping for selectors and a number of code patterns
that were allowed before are no longer allowed, in particular the following
method definitions raise ``objc.BadPrototypeError``::

   class MyObject (NSObject):
      def mymethod(self, a, b): ...
      def method_arg_(self, a, b, c): ...

If these methods are only used from Python and are never used from Objective-C
the error can be avoided by decorating these methods with ``objc.python_method``::

   class MyObject (NSObject):
      @objc.python_method
      def mymethod(self, a, b): ...

This cannnot be used for methods used from Objective-C, for those you will
have to rename the method or you will have to provide an appropriate selector
explictly.

* Fix crash when using some APIs in the LaunchServices framework.

* Issue #100:Building with the Command Line Tools for Xcode installed caused build errors
  on OSX 10.10

* Python 3.6 made a change to the bytecode format that affected the way
  PyObjC calculates the default method signature for Python methods.

  Earlier versions of PyObjC will therefore not work properly with Python 3.6.

* Update metadata for macOS 10.12.1

  Note: Building PyObjC on macOS 10.12 requires Xcode 8.1 (or a later version)

* Added bindings for the SafariServices and Intents frameworks, both introducted in macOS 10.12.

* Added bindings for the MediaPlayer framework, introducted in macOS 10.12.1.
